Speech bubbles now have transparent edges and drop shadows.  Had to fix the background appearing behind the border.

--- a/src/index.sass
+++ b/src/index.sass
@@ -48,8 +48,9 @@ body
 
 .speech
   position: absolute
-  border: 6vh solid
-  border-image-slice: 6
-  background: white
+  border: 8vh solid
+  border-image-slice: 8
   white-space: pre-wrap
   max-width: 50vh
+  background: white
+  background-clip: content-box
